--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,3 +23,42 @@ body {
     @apply text-white bg-primary md:text-primary md:bg-transparent;
 }
 
+/*
+Animation classes
+ */
+
+.pulsate-fwd {
+    -webkit-animation: pulsate-fwd 0.5s ease-in-out both;
+    animation: pulsate-fwd 0.5s ease-in-out both;
+}
+
+@-webkit-keyframes pulsate-fwd {
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+    50% {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+@keyframes pulsate-fwd {
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+    50% {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+
